[tool.poetry]
name = "headlineai"
version = "0.1.0"
description = ""
authors = ["Muhammad Zain Attiq <zainatteeq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlmodel = "^0.0.22"
pytest = "^8.3.3"
python-jose = "^3.3.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
passlib = "^1.7.4"
pydantic-settings = "^2.5.2"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
